--- a/src/main/resources/templates/newsItem.html
+++ b/src/main/resources/templates/newsItem.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.springframework.org/security/tags">
 
     <head>
         <meta charset="UTF-8" />
@@ -7,47 +7,52 @@
     </head>
     <body>
         <nav>
-            <a th:href="@{/newsItems}">Back to news</a>
+            <a th:href="@{/newsItems}">All news</a>
+            <span th:each="category : ${categories}">
+                <a th:href="@{/categories/{id}(id=${category.id})}">
+                    <span th:text="${category.name}">category</span>
+                </a>
+            </span>
+            <a th:href="@{/login}">Login</a>
+            <a th:href="@{/logout}">Logout</a>
         </nav>
+        <div sec:authorize="hasRole('ADMIN')">
+            <div th:if="${not #lists.isEmpty(categories)}">
 
-        <div th:if="${not #lists.isEmpty(categories)}">
+                <h2>Assign to category</h2>
 
-            <h2>Assign to category</h2>
-
-            <form method="POST" th:action="@{/newsItems/{newsItemId}/categories(newsItemId=${newsItem.id})}">
-                <select name="categoryId">
-                    <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">category</option>
-                </select>
-                <input type="submit" value="Assign" id="add-to-category"/>
+                <form method="POST" th:action="@{/newsItems/{newsItemId}/categories(newsItemId=${newsItem.id})}">
+                    <select name="categoryId">
+                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}">category</option>
+                    </select>
+                    <input type="submit" value="Assign" id="add-to-category"/>
+                </form>
+            </div>
+            <form method="POST" th:action="@{/categories/{newsItemId}(newsItemId=${newsItem.id})}">
+                <input type="text" name="name"/>
+                <input type="submit" value="Add new Category"/>
+            </form>
+            <form th:action="@{/newsItems/{newsItemId}(newsItemId=${newsItem.id})}" th:method="DELETE">
+                <input type="submit" value="Remove this post"/>
             </form>
         </div>
-        <form method="POST" th:action="@{/categories/{newsItemId}(newsItemId=${newsItem.id})}">
-            <input type="text" name="name"/>
-            <input type="submit" value="Add new Category"/>
-        </form>
-        <form th:action="@{/newsItems/{newsItemId}(newsItemId=${newsItem.id})}" th:method="DELETE">
-            <input type="submit" value="Remove this post"/>
-        </form>
+            <h2 th:text="${newsItem.headline} + ' ' + ${newsItem.posted}">headline</h2>
 
+            <div th:if="${newsItem.fileObject != null}">
+                <img alt="Image" th:src="@{/newsItems/{newsItemId}/content(newsItemId=${newsItem.id})}" style="width:250px;height:100px;"/>
+            </div>
 
-        <h2 th:text="${newsItem.headline} + ' ' + ${newsItem.posted}">headline</h2>
+            <h4>
+                <span th:text="${newsItem.lead}">lead</span>
+            </h4>
 
-        <div th:if="${newsItem.fileObject != null}">
-            <img alt="Image" th:src="@{/newsItems/{newsItemId}/content(newsItemId=${newsItem.id})}" style="width:250px;height:100px;"/>
-        </div>
+            <p><span th:text="${newsItem.text}">text</span></p>
 
-        <h4>
-            <span th:text="${newsItem.lead}">lead</span>
-        </h4>
-
-        <p><span th:text="${newsItem.text}">text</span></p>
-
-        <div>
-            <ul>
-                <li th:each="category : ${newsItem.categories}" th:text="${category.name}"></li>
-            </ul>
-        </div>
-
+            <div>
+                <ul>
+                    <li th:each="category : ${newsItem.categories}" th:text="${category.name}"></li>
+                </ul>
+            </div>
     </body>
 
 </html>
