--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -26,9 +26,9 @@
             </form>
 
             <form method="POST" th:action="@{/newsItems}" enctype="multipart/form-data">
-                <input type="text" name="headline"/>
-                <input type="text" name="lead"/>
-                <input type="text" name="text"/>
+                <input type="text" name="headline" placeholder="headline"/>
+                <input type="text" name="lead" placeholder="lead"/>
+                <input type="text" name="text" placeholder="text"/>
                 <input type="date" name="posted" id="theDate"></input>
                 <input type="file" name="file"/>
                 <input type="submit" value="Add"/>
