removed testing tools from production

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -21,9 +21,9 @@
                 Post news
             </h3>
 
-            <form method="POST" th:action="@{/test}">
+<!--            <form method="POST" th:action="@{/test}">
                 <input type="submit" value="Test"/>
-            </form>
+            </form>-->
 
             <form method="POST" th:action="@{/newsItems}" enctype="multipart/form-data">
                 <input type="text" name="headline" placeholder="headline"/>
