--- a/src/main/resources/templates/newsItems.html
+++ b/src/main/resources/templates/newsItems.html
@@ -20,9 +20,9 @@
             <h3>
                 Post news
             </h3>
-            <form method="POST" th:action="@{/test}">
+<!--            <form method="POST" th:action="@{/test}">
                 <input type="submit" value="Test"/>
-            </form>
+            </form>-->
             <form method="POST" th:action="@{/newsItems}" enctype="multipart/form-data">
                 <input type="text" name="headline" placeholder="headline"/>
                 <input type="text" name="lead" placeholder="lead"/>
