--- a/src/main/resources/templates/newsItem.html
+++ b/src/main/resources/templates/newsItem.html
@@ -36,23 +36,21 @@
                 <input type="submit" value="Remove this post"/>
             </form>
         </div>
-            <h2 th:text="${newsItem.headline} + ' ' + ${newsItem.posted}">headline</h2>
+        <h2 th:text="${newsItem.headline} + ' ' + ${newsItem.posted}">headline</h2>
 
-            <div th:if="${newsItem.fileObject != null}">
-                <img alt="Image" th:src="@{/newsItems/{newsItemId}/content(newsItemId=${newsItem.id})}" style="width:250px;height:100px;"/>
-            </div>
+        <div th:if="${newsItem.fileObject != null}">
+            <img alt="Image" th:src="@{/newsItems/{newsItemId}/content(newsItemId=${newsItem.id})}" style="width:320px;height:240px;"/>
+        </div>
 
-            <h4>
-                <span th:text="${newsItem.lead}">lead</span>
-            </h4>
+        <h4>
+            <span th:text="${newsItem.lead}">lead</span>
+        </h4>
 
-            <p><span th:text="${newsItem.text}">text</span></p>
-
-            <div>
-                <ul>
-                    <li th:each="category : ${newsItem.categories}" th:text="${category.name}"></li>
-                </ul>
-            </div>
+        <p><span th:text="${newsItem.text}">text</span></p>
+        <div>
+            <span>Categories: </span>
+            <span th:each="category : ${newsItem.categories}" th:text="${category.name + ' '}"></span>
+        </div>
     </body>
 
 </html>
