fixed broken title

--- a/src/main/resources/templates/newsItem.html
+++ b/src/main/resources/templates/newsItem.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8" />
-        <title th:text='${newsItem.headline}'>title</title>
+        <title>NewsProject</title>
     </head>
     <body>
         <nav>
